# controller/sync.go
@@ -20,6 +20,7 @@ import (
 	"k8s.io/apimachinery/pkg/apis/meta/v1/unstructured"
 	"k8s.io/apimachinery/pkg/runtime/schema"
 	"k8s.io/apimachinery/pkg/util/managedfields"
+	"k8s.io/client-go/rest"
 	"k8s.io/kubectl/pkg/util/openapi"
 
 	"github.com/argoproj/argo-cd/v2/controller/metrics"
@@ -38,6 +39,8 @@ const (
 	// EnvVarSyncWaveDelay is an environment variable which controls the delay in seconds between
 	// each sync-wave
 	EnvVarSyncWaveDelay = "ARGOCD_SYNC_WAVE_DELAY"
+
+	EnvImpersonationFeatureFlag = "ARGOCD_APPLICATION_CONTROLLER_ENABLE_IMPERSONATION"
 )
 
 func (m *appStateManager) getOpenAPISchema(server string) (openapi.Resources, error) {
@@ -178,7 +181,9 @@ func (m *appStateManager) SyncAppState(app *v1alpha1.Application, state *v1alpha
 
 	rawConfig := clst.RawRestConfig()
 	restConfig := metrics.AddMetricsTransportWrapper(m.metricsServer, app, clst.RESTConfig())
-
+	setImpersonationConfig(rawConfig, app, proj)
+	setImpersonationConfig(restConfig, app, proj)
+	log.Info("Using impersonated service account system:serviceaccount:argocd:testadmin for the sync operation")
 	resourceOverrides, err := m.settingsMgr.GetResourceOverrides()
 	if err != nil {
 		state.Phase = common.OperationError
@@ -543,4 +548,35 @@ func delayBetweenSyncWaves(phase common.SyncPhase, wave int, finalWave bool) err
 		time.Sleep(duration)
 	}
 	return nil
+}
+
+const impersonateUserNameFormat = "system:serviceaccount:%s:%s"
+const defaultServiceAccountName = "default"
+
+// setImpersonationConfig sets the impersonation config if the feature is enabled via environment variable explicitly.
+func setImpersonationConfig(cfg *rest.Config, app *v1alpha1.Application, proj *v1alpha1.AppProject) {
+	envValue, ok := os.LookupEnv(EnvImpersonationFeatureFlag)
+	if !ok {
+		log.Info("Skipping Impersonation config as environment variable is not set")
+		return
+	}
+	enabled, err := strconv.ParseBool(envValue)
+	if err != nil {
+		log.Info("Skipping Impersonation config as it is not enabled")
+		return
+	}
+	if enabled {
+		serviceAccountName := app.Spec.ServiceAccountName
+		// if not set in Application, take the value set it AppProject
+		if serviceAccountName == "" {
+			serviceAccountName = proj.Spec.DefaultServiceAccountName
+		}
+		// if not set in both Application and AppProject, use the default service account
+		if serviceAccountName == "" {
+			serviceAccountName = defaultServiceAccountName
+		}
+		cfg.Impersonate = rest.ImpersonationConfig{
+			UserName: fmt.Sprintf(impersonateUserNameFormat, app.Namespace, serviceAccountName),
+		}
+	}
 }
